--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "todolist",
+  "name": "todo-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "json-server": "^0.17.2",
-    "live-server": "^1.2.2"
-  },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "json:server": "json-server --watch ./db/db.json",
-    "live-server": "live-server --ignore=./db/db.json .",
+    "live-server": "live-server --ignore='./db' ",
     "start": "npm run json:server & npm run live-server"
   },
-  "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "json-server": "^0.17.2",
+    "live-server": "^1.2.2"
+  }
 }
